# AudienceForcaster

./: README.md  app.py
AudienceForcaster/: app.py  pyproject.toml
AudienceForcaster/data/: audience_forecasting_platform.csv
AudienceForcaster/src/: visualizations.py
AudienceForcaster/src/repl_nix_audienceforecaster_ml_dashboard.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/: data_processor.py  time_series.py
src/repl_nix_audienceforecaster_ml_dashboard.egg-info/: requires.txt
