[project]
name = "repl-nix-audienceforecaster-ml-dashboard"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.0",
    "pandas>=2.2.3",
    "plotly>=5.24.1",
    "prophet>=1.1.6",
    "scikit-learn>=1.6.0",
    "statsmodels>=0.14.4",
    "streamlit>=1.41.1"
]